# TraceMind

./: .gitignore  AGENTS.md  LICENSE  README.md  _logging.py  _monorepo.py  build.gradle.kts  dev-setup.sh  gradle.properties  jitpack.yml  settings.gradle.kts
atrace-ai/: pyproject.toml
atrace-ai/atrace_ai/: cursor_runner.py  prompt_builder.py
atrace-ai/atrace_ai/fallback/: __init__.py  analyzer.py  formatter.py
atrace-analyzer/: pyproject.toml
atrace-analyzer/atrace_analyzer/metrics/: overview.py  scroll.py  startup.py
atrace-api/: consumer-rules.pro
atrace-capture/: pyproject.toml
atrace-capture/atrace_capture/: __init__.py  device_controller.py  perfetto_viewer.py  provision_bridge.py  repo_paths.py
atrace-capture/atrace_capture/config/: registry.py  schema.py
atrace-capture/atrace_capture/config/perfetto/: binder.txtpb  startup.txtpb
atrace-capture/atrace_capture/config/presets/: animation.yaml  cpu_profile.yaml  scroll.yaml  startup.yaml
atrace-capture/atrace_capture/engines/: cpu.py  merged.py
atrace-core/: .gitignore
atrace-core/src/main/: AndroidManifest.xml
atrace-core/src/main/cpp/: CMakeLists.txt
atrace-core/src/main/cpp/buffer/: LockFreeRingBuffer.cpp  LockFreeRingBuffer.h  SampleRecord.cpp
atrace-core/src/main/cpp/core/: BufferManager.cpp  StackSampler.cpp  SymbolResolver.cpp  SymbolResolver.h  TraceEngine.cpp  TraceEngine.h
atrace-core/src/main/cpp/hook/: ArtMethodInstrumentation.cpp  ArtMethodInstrumentation.h  BinderHook.cpp  BinderHook.h  GCHook.h  HookPlugin.h  IOHook.h  JNIMethodHook.cpp
atrace-core/src/main/cpp/hook/alloc/: AllocCommon.h  AllocHook.h  Checkpoint.h
atrace-core/src/main/cpp/include/: atrace.h
atrace-core/src/main/cpp/jni/: plugin_jni.cpp
atrace-core/src/main/cpp/utils/: time_utils.cpp  time_utils.h
atrace-device/: pyproject.toml
atrace-device/atrace_device/: __init__.py  app_client.py  engine_cli.py
atrace-mcp/: .gitignore  MANIFEST.in  README.md  _run_user_workflow.py  analyze_cli.py  device_controller.py  mcp_pipeline.py  prompts.py  pyproject.toml  run_mcp.py  server.py  test_http_control.py  tool_provisioner.py  trace_analyzer.py
atrace-mcp/atrace_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
atrace-mcp/mcp_bundled_resources/: README.md  perfetto-trace-processor-reference.md
atrace-mcp/mcp_bundled_resources/configs/: animation.txtpb
atrace-mcp/scripts/: README.md  build_release.sh  serve_trace_for_perfetto.py
atrace-mcp/simpleperf_toolkit/: README.md
atrace-mcp/tools/: __init__.py  _helpers.py  analysis_tools.py  profiling_tools.py  query_tools.py  resources.py
atrace-orchestrator/: pyproject.toml
atrace-orchestrator/atrace_orchestrator/: playbook.py
atrace-orchestrator/atrace_orchestrator/playbooks/: startup.yaml
atrace-provision/: pyproject.toml
atrace-provision/atrace_provision/: _download.py  _ndk.py  registry.py
atrace-provision/atrace_provision/providers/: atrace_tool.py  base.py  perfetto.py  simpleperf.py  simpleperf_toolkit.py
atrace-service/: .gitignore  README.md  pyproject.toml
atrace-service/atrace_service/: engine.py  main.py
atrace-service/atrace_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
atrace-service/atrace_service/routes/: ai.py  analysis.py  capture.py  trace.py  ui.py
atrace-tool/: .gitignore  build.gradle.kts
docs/: ARTMETHOD_WATCHLIST.md  ATRACE_ENGINEERING_GUIDE.md  ATRACE_MCP_AND_CONFIGS.md  ATRACE_MCP_DEMO_SCENARIOS.md  JANK_CHECKLIST.md  PERFETTO_JANK_GUIDE.md  PUBLISH.md  SHADOW_PAUSE.md
docs/configs/: README.md  memory.txtpb  scroll.txtpb
docs/so/: get_method_md.md
docs/so/android16(36)/: libart_methid.txt
gradle/: libs.versions.toml  publish-atrace-java.gradle.kts  publish-atrace.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
platform/: _logging.py  _monorepo.py
platform/atrace-ai/: .gitignore
platform/atrace-ai/atrace_ai/: __init__.py  cursor_runner.py  prompt_builder.py  session_manager.py
platform/atrace-analyzer/: .gitignore  README.md  pyproject.toml
platform/atrace-analyzer/atrace_analyzer/: __init__.py  analyzer.py  cli.py
platform/atrace-analyzer/atrace_analyzer/metrics/: jank.py  slices.py
platform/atrace-capture/: .gitignore  pyproject.toml
platform/atrace-capture/atrace_capture/: __init__.py  device_controller.py  engine.py  provision_bridge.py  repo_paths.py  router.py
platform/atrace-capture/atrace_capture/config/: perfetto_paths.py
platform/atrace-capture/atrace_capture/engines/: heap.py
platform/atrace-device/: .gitignore
platform/atrace-device/atrace_device/: adb_bridge.py  device_info.py  file_transfer.py
platform/atrace-mcp/: .gitignore  MANIFEST.in  README.md  _run_user_workflow.py  mcp_pipeline.py  prompts.py  pyproject.toml  requirements.txt  run_mcp.py  server.py  test_http_control.py  tool_provisioner.py  trace_analyzer.py
platform/atrace-mcp/mcp_bundled_resources/: README.md
platform/atrace-mcp/scripts/: README.md  build_release.py
platform/atrace-mcp/tools/: control_tools.py  perfetto_local_viewer.py  query_tools.py  resources.py
platform/atrace-orchestrator/: .gitignore
platform/atrace-orchestrator/atrace_orchestrator/: __init__.py
platform/atrace-orchestrator/atrace_orchestrator/playbooks/: general.yaml  memory.yaml  scroll.yaml
platform/atrace-provision/: .gitignore  MANIFEST.in  pyproject.toml
platform/atrace-provision/atrace_provision/: __init__.py  _adb.py  bundled_paths.py  registry.py
platform/atrace-provision/atrace_provision/bundled_bin/: README.md
platform/atrace-provision/atrace_provision/bundled_simpleperf/: README.md
platform/atrace-service/: README.md
platform/atrace-service/atrace_service/: __init__.py  engine.py  main.py  models.py
platform/atrace-service/scripts/: start_atrace_service.py
sample/: build.gradle.kts
sdk/atrace-api/: .gitignore  build.gradle.kts
sdk/atrace-core/: build.gradle.kts  consumer-rules.pro
sdk/atrace-tool/: README.md  build.gradle.kts
sdk/sample/: README.md  proguard-rules.pro
(+108 files in other folders)
