[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atrace-capture"
version = "0.1.0"
description = "Capture engine layer for TraceMind — CaptureEngine ABC, config schema, presets"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

# Inter-package deps resolved via monorepo editable install (./dev-setup.sh)
# atrace-device

[tool.setuptools.packages.find]
where = ["."]
include = ["atrace_capture*"]

[tool.setuptools.package-data]
"atrace_capture.config" = ["presets/*.yaml", "perfetto/*.txtpb"]
