[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atrace-mcp"
version = "1.0.0"
description = "ATrace MCP Server + headless trace analysis CLI (same engine as MCP)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["android", "performance", "mcp", "perfetto", "atrace", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "fastmcp>=2.0.0",
    "perfetto>=0.7.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

# Inter-package deps resolved via monorepo editable install (./dev-setup.sh)
# atrace-device, atrace-analyzer, atrace-provision, atrace-capture

[project.urls]
Homepage = "https://github.com/xcleans/TraceMind"
Documentation = "https://github.com/xcleans/TraceMind/blob/main/README.md"
Issues = "https://github.com/xcleans/TraceMind/issues"

# ── Scripts / entry-points ───────────────────────────────────────────────────
# After `pip install atrace-mcp`, users can run `atrace-mcp` directly.
[project.scripts]
atrace-mcp = "run_mcp:main"
atrace-analyze = "analyze_cli:main"

# ── atrace-tool JAR: deployed by ./gradlew deployMcp ─────────────────────────
# Before packaging this Python distribution, run:
#   ./gradlew deployMcp
# This copies atrace-tool.jar to atrace-mcp/bin/ so it is included in the wheel.
# Flat-layout: all .py files sit at the root, not inside a sub-package.
# We use py_modules to list them explicitly so they are included in the wheel.
[tool.setuptools]
py-modules = [
    "server",
    "run_mcp",
    "analyze_cli",
    "device_controller",
    "trace_analyzer",
    "tool_provisioner",
    "prompts",
    "mcp_pipeline",
]

# data_files ships non-Python assets alongside the wheel.
# Destination paths are relative to sys.prefix (site-packages parent).
# We place everything under atrace_mcp/ so run_mcp.py can find them via __file__.
[tool.setuptools.data-files]
"atrace_mcp/bin" = ["bin/atrace-tool.jar"]
"atrace_mcp/scripts" = [
    "scripts/record_android_trace",
    "scripts/record_android_trace_win",
    "scripts/serve_trace_for_perfetto.py",
]
# MCP resources (configs + Perfetto SQL reference) for pip/venv installs — server also checks
# Path(__file__).parent/mcp_bundled_resources when distributing the atrace-mcp/ folder as a zip.
"atrace_mcp/mcp_bundled_resources" = [
    "mcp_bundled_resources/README.md",
    "mcp_bundled_resources/perfetto-trace-processor-reference.md",
]
"atrace_mcp/mcp_bundled_resources/configs" = [
    "mcp_bundled_resources/configs/README.md",
    "mcp_bundled_resources/configs/animation.txtpb",
    "mcp_bundled_resources/configs/binder.txtpb",
    "mcp_bundled_resources/configs/config.txtpb",
    "mcp_bundled_resources/configs/memory.txtpb",
    "mcp_bundled_resources/configs/scroll.txtpb",
    "mcp_bundled_resources/configs/startup.txtpb",
]

# ── uv / pip extras ──────────────────────────────────────────────────────────
[dependency-groups]
dev = [
    "twine>=5.0.0",   # for publishing to PyPI: uv run twine upload dist/*
]

