[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atrace-mcp"
version = "1.1.0"
description = "ATrace MCP Server (Perfetto analysis via MCP; headless CLI is `atrace-analyze` in atrace-analyzer)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["android", "performance", "mcp", "perfetto", "atrace", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "fastmcp>=2.0.0",
    "perfetto>=0.7.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "atrace-capture",
]

# Monorepo: `DeviceController` / `tool_provisioner` live in `atrace-capture` (Phase 6).
[tool.uv.sources]
atrace-capture = { path = "../atrace-capture", editable = true }

# Other peers: ./dev-setup.sh or add path sources as needed (atrace-analyzer, …).

[project.urls]
Homepage = "https://github.com/xcleans/TraceMind"
Documentation = "https://github.com/xcleans/TraceMind/blob/main/README.md"
Issues = "https://github.com/xcleans/TraceMind/issues"

# ── Scripts / entry-points ───────────────────────────────────────────────────
# After `pip install atrace-mcp`, users can run `atrace-mcp` directly.
# Headless JSON CLI `atrace-analyze` lives in the `atrace-analyzer` package.
[project.scripts]
atrace-mcp = "run_mcp:main"

# ── atrace-tool JAR: deployed by ./gradlew deployMcp ─────────────────────────
# Before packaging this Python distribution, run:
#   ./gradlew deployMcp
# This copies atrace-tool.jar into platform/atrace-provision/atrace_provision/bundled_bin/
# (included in the atrace-provision wheel, not atrace-mcp).
# Flat-layout: all .py files sit at the root, not inside a sub-package.
# We use py_modules to list them explicitly so they are included in the wheel.
[tool.setuptools]
py-modules = [
    "server",
    "run_mcp",
    "device_controller",
    "trace_analyzer",
    "tool_provisioner",
    "prompts",
    "mcp_pipeline",
]

# data_files ships non-Python assets alongside the wheel (relative to sys.prefix).
[tool.setuptools.data-files]
# MCP resources (configs + Perfetto SQL reference) for pip/venv installs — server also checks
# Path(__file__).parent/mcp_bundled_resources when distributing the atrace-mcp/ folder as a zip.
"atrace_mcp/mcp_bundled_resources" = [
    "mcp_bundled_resources/README.md",
    "mcp_bundled_resources/perfetto-trace-processor-reference.md",
]

# ── uv / pip extras ──────────────────────────────────────────────────────────
[dependency-groups]
dev = [
    "twine>=5.0.0",   # for publishing to PyPI: uv run twine upload dist/*
]

